Apply code inspection suggestion: Use SequencedCollections API