@@ -345,10 +345,10 @@ public class TradeWizardReviewController implements Controller {
             model.getTakersBitcoinPaymentMethods().setAll(bitcoinPaymentMethods);
             model.getTakersFiatPaymentMethods().setAll(fiatPaymentMethods);
             if (model.getTakersSelectedBitcoinPaymentMethod() == null) {
-                model.setTakersSelectedBitcoinPaymentMethod(bitcoinPaymentMethods.get(0));
+                model.setTakersSelectedBitcoinPaymentMethod(bitcoinPaymentMethods.getFirst());
             }
             if (model.getTakersSelectedFiatPaymentMethod() == null) {
-                model.setTakersSelectedFiatPaymentMethod(fiatPaymentMethods.get(0));
+                model.setTakersSelectedFiatPaymentMethod(fiatPaymentMethods.getFirst());
             }
             model.setBitcoinPaymentMethodDescription(
                     bitcoinPaymentMethods.size() == 1
