@@ -100,7 +100,7 @@ public class I2pEmbeddedRouter {
             }
         }
 
-        routerContext = RouterContext.listContexts().get(0);
+        routerContext = RouterContext.listContexts().getFirst();
         router = routerContext.router();
         // Check for RUNNING state (indicating NetDB and tunnels are ready)
         while(!router.isRunning()) {
@@ -174,7 +174,7 @@ public class I2pEmbeddedRouter {
             }
             router.setKillVMOnEnd(false);
             router.runRouter();
-            routerContext = RouterContext.listContexts().get(0);
+            routerContext = RouterContext.listContexts().getFirst();
             while(!router.isRunning()) {
                 try {
                     Thread.sleep(1000);
