@@ -115,7 +115,7 @@ public class ProfileAgeService extends SourceReputationService<AuthorizedTimesta
         }
 
         // If new data is older than existing entry we clear set and add our new data, otherwise we ignore the new data.
-        AuthorizedTimestampData existing = new ArrayList<>(dataSet).get(0);
+        AuthorizedTimestampData existing = new ArrayList<>(dataSet).getFirst();
         if (existing.getDate() > data.getDate()) {
             dataSet.clear();
             dataSet.add(data);
